# json-experimental

./: .clang-format  .gitignore  CMakeLists.txt  appveyor.yml
cmake/: AddModule.cmake  GenerateVersionHeader.cmake  SetupCatch2.cmake
json/: CMakeLists.txt
json/include/json/: json.h
json/src/: library_main.cpp
json_test/: CMakeLists.txt
json_test/src/: 1.test.cpp  2.test.cpp  JsonArray.test.cpp  JsonBoolean.test.cpp  JsonNull.test.cpp  JsonNumber.test.cpp  JsonObject.test.cpp  JsonString.test.cpp  JsonValue.test.cpp  test1.cpp
